--- a/package.json
+++ b/package.json
@@ -26,26 +26,29 @@
   },
   "homepage": "https://gitlab.com/koleg1/api#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "slugify": "^1.4.6"
   },
   "devDependencies": {
+    "@types/email-templates": "^7.1.0",
     "@types/express": "^4.17.8",
     "@types/node": "^14.14.3",
+    "@types/uuid": "^8.3.0",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   },
   "nodemonConfig": {
     "ignore": [
-    "**/*.test.ts",
-    "**/*.spec.ts",
-    ".git",
-    "node_modules"
+      "**/*.test.ts",
+      "**/*.spec.ts",
+      ".git",
+      "node_modules"
     ],
     "watch": [
       "src"
     ],
     "exec": "npm start",
     "ext": "ts"
- }
+  }
 }
