--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "node --inspect=5858 -r ts-node/register ./src/server.ts",
     "start:watch": "nodemon",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "codegen": " npx swagger-typescript-api -p openapi.yml -n KolegApi.ts -o ./auto"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,8 @@
   "homepage": "https://gitlab.com/koleg1/api#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "slugify": "^1.4.6"
+    "slugify": "^1.4.6",
+    "swagger-typescript-api": "^3.0.1"
   },
   "devDependencies": {
     "@types/email-templates": "^7.1.0",
@@ -36,7 +38,8 @@
     "@types/uuid": "^8.3.0",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "swagger-typescript-codegen": "^3.2.1"
   },
   "nodemonConfig": {
     "ignore": [
