--- a/package.json
+++ b/package.json
@@ -27,15 +27,21 @@
   },
   "homepage": "https://gitlab.com/koleg1/api#readme",
   "dependencies": {
+    "@types/bluebird": "^3.5.33",
     "express": "^4.17.1",
     "slugify": "^1.4.6",
-    "swagger-typescript-api": "^3.0.1"
+    "swagger-typescript-api": "^3.0.1",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@types/email-templates": "^7.1.0",
     "@types/express": "^4.17.8",
-    "@types/node": "^14.14.3",
+    "@types/node": "^14.14.10",
     "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.1.0",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3",
