--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "class-validator": "^0.12.2",
     "crypto-js": "^4.0.0",
     "deep-copy-ts": "^0.5.0",
-    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "kill-port": "^1.6.1",
     "multer": "^1.4.2",
@@ -63,7 +62,8 @@
     "sequelize": "^6.3.5",
     "slugify": "^1.4.6",
     "swagger-typescript-api": "^3.0.1",
-    "typedi": "^0.8.0"
+    "typedi": "^0.8.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
