--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,10 @@
             "*": [
                 "node_modules/*"
             ]
-        },
+        }
     },
     "include": [
-        "src/**/*.ts"
+        "src/**/*.ts", "src/infra/BDD.js"
     ],
     "exclude": [
         "node_modules",
