--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prestart": "npm run build",
     "start": "node -r ts-node/register ./src/main.ts",
     "dev": "nodemon src/**/*.ts",
+    "lint": "eslint . --ext .ts",
     "start:watch": "nodemon",
     "build": "tsc",
     "test": "mocha -r ts-node/register tests/**/*.test.ts",
@@ -31,18 +32,18 @@
   "dependencies": {
     "@types/bluebird": "^3.5.33",
     "@types/crypto-js": "^4.0.1",
-    "@types/jest": "^26.0.15",
-    "@types/mocha": "^8.0.4",
-    "chai": "^4.2.0",
+    "@types/passport": "^1.0.4",
+    "@types/passport-http-bearer": "^1.0.36",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
-    "mocha": "^8.2.1",
-    "slugify": "^1.4.6",
-    "swagger-typescript-api": "^3.0.1",
+    "passport-bearer-strategy": "^1.0.1",
+    "passport-http-bearer": "^1.0.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "slugify": "^1.4.6",
+    "swagger-typescript-api": "^3.0.1"
   },
   "devDependencies": {
     "@types/email-templates": "^7.1.0",
@@ -50,10 +51,17 @@
     "@types/node": "^14.14.10",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@types/jest": "^26.0.15",
+    "@typescript-eslint/parser": "^4.9.1",
+    "@types/mocha": "^8.0.4",
+    "mocha": "^8.2.1",
+    "chai": "^4.2.0",
+    "eslint": "^7.15.0",
+    "swagger-typescript-codegen": "^3.2.1",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.3",
-    "swagger-typescript-codegen": "^3.2.1"
+    "typescript": "^4.0.3"
   },
   "nodemonConfig": {
     "ignore": [
