--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "esModuleInterop": true,
+        "skipLibCheck": true,
         "target": "es6",
         "noImplicitAny": true,
         "moduleResolution": "node",
@@ -20,7 +21,7 @@
         "src/**/*.ts"
     ],
     "exclude": [
-    "node_modules",
-    ".vscode"
+        "node_modules",
+        ".vscode"
     ]
 }
