[✨] Start implementing passport auth

--- a/package.json
+++ b/package.json
@@ -31,13 +31,26 @@
   "homepage": "https://gitlab.com/koleg1/api#readme",
   "dependencies": {
     "@types/bluebird": "^3.5.33",
+    "@types/body-parser": "^1.19.0",
     "@types/crypto-js": "^4.0.1",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/passport": "^1.0.4",
     "@types/passport-http-bearer": "^1.0.36",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
+    "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
+    "deep-copy-ts": "^0.5.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "openapi-comment-parser": "^1.0.0",
+    "passport": "^0.4.1",
     "passport-bearer-strategy": "^1.0.1",
+    "passport-gitlab2": "^5.0.0",
     "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
+    "passport-jwt-cookiecombo": "^1.0.5",
+    "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
