[✨] Add big router-controller and API models

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint . --ext .ts",
     "start:watch": "nodemon",
     "build": "tsc",
-    "test": "mocha -r ts-node/register tests/**/*.test.ts",
+    "test:domain": "mocha -r ts-node/register tests/**/*.test.ts",
+    "test:app": "npm run build; mocha -r ts-node/register tests/**/*.test.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "codegen": " npx swagger-typescript-api -p openapi.yml -n KolegApi.ts -o ./auto"
   },
@@ -31,7 +32,6 @@
   "homepage": "https://gitlab.com/koleg1/api#readme",
   "dependencies": {
     "@types/bluebird": "^3.5.33",
-    "@types/body-parser": "^1.19.0",
     "@types/crypto-js": "^4.0.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/passport": "^1.0.4",
@@ -39,10 +39,14 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "crypto-js": "^4.0.0",
     "deep-copy-ts": "^0.5.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "kill-port": "^1.6.1",
+    "multer": "^1.4.2",
     "openapi-comment-parser": "^1.0.0",
     "passport": "^0.4.1",
     "passport-bearer-strategy": "^1.0.1",
@@ -54,23 +58,28 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.9.0-alpha.6",
+    "routing-controllers-openapi": "^2.2.0",
     "sequelize": "^6.3.5",
     "slugify": "^1.4.6",
-    "swagger-typescript-api": "^3.0.1"
+    "swagger-typescript-api": "^3.0.1",
+    "typedi": "^0.8.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/email-templates": "^7.1.0",
-    "@types/express": "^4.17.8",
+    "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.15",
+    "@types/mocha": "^8.0.4",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.10",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@types/jest": "^26.0.15",
     "@typescript-eslint/parser": "^4.9.1",
-    "@types/mocha": "^8.0.4",
-    "mocha": "^8.2.1",
     "chai": "^4.2.0",
     "eslint": "^7.15.0",
+    "mocha": "^8.2.1",
     "swagger-typescript-codegen": "^3.2.1",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
