--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,13 @@
         "sourceMap": true,
         "outDir": "dist",
         "baseUrl": "src",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "paths": {
             "*": [
                 "node_modules/*"
             ]
         },
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
     },
     "include": [
         "src/**/*.ts"
