--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://gitlab.com/koleg1/api#readme",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.33",
     "@types/crypto-js": "^4.0.1",
     "@types/jsonwebtoken": "^8.5.0",
@@ -38,11 +39,13 @@
     "@types/passport-http-bearer": "^1.0.36",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "crypto-js": "^4.0.0",
     "deep-copy-ts": "^0.5.0",
+    "deep-equal": "^2.0.5",
     "jsonwebtoken": "^8.5.1",
     "kill-port": "^1.6.1",
     "multer": "^1.4.2",
@@ -67,6 +70,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/deep-equal": "^1.0.1",
     "@types/email-templates": "^7.1.0",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
