--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "crypto-js": "^4.0.0",
     "deep-copy-ts": "^0.5.0",
     "deep-equal": "^2.0.5",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "kill-port": "^1.6.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "openapi-comment-parser": "^1.0.0",
     "passport": "^0.4.1",
@@ -65,8 +67,7 @@
     "sequelize": "^6.3.5",
     "slugify": "^1.4.6",
     "swagger-typescript-api": "^3.0.1",
-    "typedi": "^0.8.0",
-    "express": "^4.17.1"
+    "typedi": "^0.8.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
@@ -75,6 +76,7 @@
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/mocha": "^8.0.4",
+    "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.10",
     "@types/uuid": "^8.3.0",
