[💩] Change controller and domain interaction
📑 Description:
- Jobs endpoints are workings
- Add DTO objects between infra/domain
- Add service to connect to Repository in sql
- wrote bad code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     },
     "include": [
         "src/**/*.ts", "src/infra/BDD.js"
-    ],
+, "src/infra/api/controllers/auth.controller.ts.old"    ],
     "exclude": [
         "node_modules",
         ".vscode"
