--- a/package.json
+++ b/package.json
@@ -86,7 +86,9 @@
     "@typescript-eslint/parser": "^4.9.1",
     "chai": "^4.2.0",
     "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.1.0",
     "mocha": "^8.2.1",
+    "prettier": "2.2.1",
     "swagger-typescript-codegen": "^3.2.1",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
