--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "class-validator-jsonschema": "^2.0.3",
     "crypto-js": "^4.0.0",
     "deep-copy-ts": "^0.5.0",
     "deep-equal": "^2.0.5",
     "express": "^4.17.1",
+    "fuse.js": "^6.4.3",
     "jsonwebtoken": "^8.5.1",
     "kill-port": "^1.6.1",
     "morgan": "^1.10.0",
@@ -68,6 +70,7 @@
     "sequelize": "^6.3.5",
     "slugify": "^1.4.6",
     "swagger-typescript-api": "^3.0.1",
+    "swagger-ui-express": "^4.1.5",
     "typedi": "^0.8.0"
   },
   "devDependencies": {
@@ -80,6 +83,7 @@
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
