--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint . --ext .ts",
     "start:watch": "nodemon",
     "build": "tsc",
-    "test": "mocha -r ts-node/register tests/**/*.test.ts",
+    "test": "mocha --color -r ts-node/register tests/**/*.test.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "codegen": " npx swagger-typescript-api -p openapi.yml -n KolegApi.ts -o ./auto"
   },
@@ -30,6 +30,34 @@
   },
   "homepage": "https://gitlab.com/koleg1/api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
+    "class-validator-jsonschema": "^2.0.3",
+    "crypto-js": "^4.0.0",
+    "deep-copy-ts": "^0.5.0",
+    "deep-equal": "^2.0.5",
+    "express": "^4.17.1",
+    "fuse.js": "^6.4.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "openapi-comment-parser": "^1.0.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.9.0-alpha.6",
+    "body-parser": "^1.19.0",
+    "routing-controllers-openapi": "^2.2.0",
+    "sequelize": "^6.3.5",
+    "slugify": "^1.4.6",
+    "swagger-typescript-api": "^3.0.1",
+    "swagger-ui-express": "^4.1.5",
+    "typedi": "^0.8.0"
+  },
+  "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.33",
     "@types/crypto-js": "^4.0.1",
@@ -39,41 +67,6 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/sequelize": "^4.28.9",
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
-    "class-validator-jsonschema": "^2.0.3",
-    "crypto-js": "^4.0.0",
-    "deep-copy-ts": "^0.5.0",
-    "deep-equal": "^2.0.5",
-    "express": "^4.17.1",
-    "fuse.js": "^6.4.3",
-    "jsonwebtoken": "^8.5.1",
-    "kill-port": "^1.6.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "openapi-comment-parser": "^1.0.0",
-    "passport": "^0.4.1",
-    "passport-bearer-strategy": "^1.0.1",
-    "passport-gitlab2": "^5.0.0",
-    "passport-http-bearer": "^1.0.1",
-    "passport-jwt": "^4.0.0",
-    "passport-jwt-cookiecombo": "^1.0.5",
-    "passport-local": "^1.0.0",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.9.0-alpha.6",
-    "routing-controllers-openapi": "^2.2.0",
-    "sequelize": "^6.3.5",
-    "slugify": "^1.4.6",
-    "swagger-typescript-api": "^3.0.1",
-    "swagger-ui-express": "^4.1.5",
-    "typedi": "^0.8.0"
-  },
-  "devDependencies": {
-    "@types/body-parser": "^1.19.0",
     "@types/deep-equal": "^1.0.1",
     "@types/email-templates": "^7.1.0",
     "@types/express": "^4.17.9",
