--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://gitlab.com/koleg1/api#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "class-validator-jsonschema": "^2.0.3",
@@ -41,6 +42,7 @@
     "fuse.js": "^6.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nyc": "^15.1.0",
     "openapi-comment-parser": "^1.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -49,7 +51,6 @@
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0-alpha.6",
-    "body-parser": "^1.19.0",
     "routing-controllers-openapi": "^2.2.0",
     "sequelize": "^6.3.5",
     "slugify": "^1.4.6",
