[📝] Add doc remove dirty directory and upgrade scripts

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "ts-node -r tsconfig-paths/register ./src/main.ts",
-    "start:prod": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./dist/main.js",
+    "start:prod": "node -r ts-node/register/transpile-only ./dist/main.js",
     "dev": "nodemon src/**/*.ts",
     "lint": "tsc --noEmit && eslint . --ext .ts --fix",
-    "build": "tsc",
+    "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist",
     "test": "mocha --color -r tsconfig-paths/register -r ts-node/register tests/**/*.test.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "codegen": " npx swagger-typescript-api -p openapi.yml -n KolegApi.ts -o ./auto"
@@ -54,27 +54,27 @@
     "slugify": "^1.4.6",
     "swagger-typescript-api": "^3.0.1",
     "swagger-ui-express": "^4.1.5",
-    "tsconfig-paths": "^3.9.0",
+    "ts-node": "^9.0.0",
     "typedi": "^0.8.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.33",
     "@types/crypto-js": "^4.0.1",
+    "@types/deep-equal": "^1.0.1",
+    "@types/email-templates": "^7.1.0",
+    "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mocha": "^8.0.4",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.10",
+    "@types/multer": "^1.4.5",
     "@types/passport": "^1.0.4",
     "@types/passport-http-bearer": "^1.0.36",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/sequelize": "^4.28.9",
-    "@types/deep-equal": "^1.0.1",
-    "@types/email-templates": "^7.1.0",
-    "@types/express": "^4.17.9",
-    "@types/jest": "^26.0.15",
-    "@types/mocha": "^8.0.4",
-    "@types/morgan": "^1.9.2",
-    "@types/multer": "^1.4.5",
-    "@types/node": "^14.14.10",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
@@ -83,10 +83,12 @@
     "chai": "^4.2.0",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.1.0",
+    "jsmin": "^1.0.1",
+    "tsconfig-paths": "^3.9.0",
+    "tscpaths": "0.0.9",
     "mocha": "^8.2.1",
     "prettier": "2.2.1",
     "swagger-typescript-codegen": "^3.2.1",
-    "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
   "nodemonConfig": {
