--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
     "root": true,
     "parser": "@typescript-eslint/parser",
+    "rules": {
+        "indent": ["error", 2]
+    },
     "plugins": [
         "@typescript-eslint"
     ],
