--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "rules": {
         "indent": ["error", 2],
         "semi": ["error", "always"],
+        "camelcase": ["error", {"properties": "always"}],
         "quotes": ["error", "double"]
     },
     "plugins": [
