--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
     "deep-copy-ts": "^0.5.0",
     "deep-equal": "^2.0.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "fuse.js": "^6.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "kill-port": "^1.6.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nyc": "^15.1.0",
     "openapi-comment-parser": "^1.0.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
@@ -70,6 +70,7 @@
     "@types/deep-equal": "^1.0.1",
     "@types/email-templates": "^7.1.0",
     "@types/express": "^4.17.9",
+    "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "^8.0.4",
