[✨] S3 client is working to upload profile picture
📑 Description:
Profile picture upload is working, but in fault
of incompability into minio,s3,acl, we must
leave scaleway s3 to minio on premise.

(It's explained into README.)

🔝 How does the change address the issue ?
- Add s3 client into infra
- Add new assets service into app
- Fix small things on domain.

⚠ What side effects does this change have ?
- Leave scaleway s3 to minio (deploy it with helm)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,14 @@
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
+        "esModuleInterop": true,
+        "composite": true,
+        "noEmit": true,
         "rootDir": "./src",
         "outDir": "dist",
         "baseUrl": "./src/",
         "experimentalDecorators": true,
+        "allowSyntheticDefaultImports": true,
         "emitDecoratorMetadata": true,
         "paths": {
             "domain/*": ["./domain/*"],
