--- a/package.json
+++ b/package.json
@@ -28,16 +28,20 @@
   },
   "homepage": "https://gitlab.com/koleg1/api#readme",
   "dependencies": {
+    "@types/convict": "^5.2.1",
+    "aws-sdk": "^2.819.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "class-validator-jsonschema": "^2.0.3",
+    "convict": "^6.0.0",
     "crypto-js": "^4.0.0",
     "deep-copy-ts": "^0.5.0",
     "deep-equal": "^2.0.5",
     "express": "^4.17.1",
     "fuse.js": "^6.4.3",
+    "minio": "^7.0.18",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nyc": "^15.1.0",
@@ -55,9 +59,12 @@
     "swagger-typescript-api": "^3.0.1",
     "swagger-ui-express": "^4.1.5",
     "ts-node": "^9.0.0",
-    "typedi": "^0.8.0"
+    "typedi": "^0.8.0",
+    "url-join-ts": "^1.0.5",
+    "vcard-creator": "^0.3.0"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.33",
     "@types/crypto-js": "^4.0.1",
@@ -66,16 +73,18 @@
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/minio": "^7.0.6",
     "@types/mocha": "^8.0.4",
     "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.10",
     "@types/multer": "^1.4.5",
+    "@types/node": "^14.14.10",
     "@types/passport": "^1.0.4",
     "@types/passport-http-bearer": "^1.0.36",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/sequelize": "^4.28.9",
     "@types/swagger-ui-express": "^4.1.2",
+    "@types/url-join": "^4.0.0",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
@@ -84,11 +93,11 @@
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.1.0",
     "jsmin": "^1.0.1",
-    "tsconfig-paths": "^3.9.0",
-    "tscpaths": "0.0.9",
     "mocha": "^8.2.1",
     "prettier": "2.2.1",
     "swagger-typescript-codegen": "^3.2.1",
+    "tsconfig-paths": "^3.9.0",
+    "tscpaths": "0.0.9",
     "typescript": "^4.0.3"
   },
   "nodemonConfig": {
