--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "deep-equal": "^2.0.5",
     "express": "^4.17.1",
     "fuse.js": "^6.4.3",
-    "minio": "^7.0.18",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nyc": "^15.1.0",
@@ -61,7 +60,8 @@
     "ts-node": "^9.0.0",
     "typedi": "^0.8.0",
     "url-join-ts": "^1.0.5",
-    "vcard-creator": "^0.3.0"
+    "vcard-creator": "^0.3.0",
+    "vcf": "^2.1.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
@@ -87,6 +87,7 @@
     "@types/url-join": "^4.0.0",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
+    "@types/vcf": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "chai": "^4.2.0",
