--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "include": [
         "src/**/*.ts",
         "types/*.d.ts"
-    ],
+, "src/app/config/config.service.ts.old"    ],
     "exclude": [
         "./node_modules",
         "dist",
