--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   "homepage": "https://gitlab.com/koleg1/api#readme",
   "dependencies": {
     "@covve/easy-vcard": "^1.0.0",
-    "@types/convict": "^5.2.1",
     "aws-sdk": "^2.819.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -60,13 +59,12 @@
     "swagger-ui-express": "^4.1.5",
     "ts-node": "^9.0.0",
     "typedi": "^0.8.0",
-    "url-join-ts": "^1.0.5",
-    "vcard-creator": "^0.3.0",
-    "vcf": "^2.1.0"
+    "url-join-ts": "^1.0.5"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/convict": "^5.2.1",
     "@types/bluebird": "^3.5.33",
     "@types/crypto-js": "^4.0.1",
     "@types/deep-equal": "^1.0.1",
@@ -74,7 +72,6 @@
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/minio": "^7.0.6",
     "@types/mocha": "^8.0.4",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
