--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,23 +33,23 @@ stages:
   script: |
     hadolint -c .hadolint.yaml Dockerfile
 
-# 🔥build_prod:
-#   stage: 🏗build
-#   extends: .docker_login
-#   script: |
-#     docker pull \
-#       $SCW_REGISTRY/$IMAGE_NAME:latest || true
-#     docker build \
-#       -t $SCW_REGISTRY/$IMAGE_NAME:latest \
-#       -t $SCW_REGISTRY/$IMAGE_NAME:$CI_COMMIT_SHA \
-#       --cache-from $SCW_REGISTRY/$IMAGE_NAME:latest \
-#       --build-arg='PROD=false' \
-#       .
-#     echo "Push image to registry"
-#     docker push \
-#       $SCW_REGISTRY/$IMAGE_NAME:latest
-#     docker push \
-#       $SCW_REGISTRY/$IMAGE_NAME:$CI_COMMIT_SHA
+🔥build_prod:
+  stage: 🏗build
+  extends: .docker_login
+  script: |
+    docker pull \
+      $SCW_REGISTRY/$IMAGE_NAME:latest || true
+    docker build \
+      -t $SCW_REGISTRY/$IMAGE_NAME:latest \
+      -t $SCW_REGISTRY/$IMAGE_NAME:$CI_COMMIT_SHA \
+      --cache-from $SCW_REGISTRY/$IMAGE_NAME:latest \
+      --build-arg='PROD=false' \
+      .
+    echo "Push image to registry"
+    docker push \
+      $SCW_REGISTRY/$IMAGE_NAME:latest
+    docker push \
+      $SCW_REGISTRY/$IMAGE_NAME:$CI_COMMIT_SHA
 
 # 🚑build_debug:
 #   stage: 🏗build
