--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "Typescript API for koleg",
   "main": "dist/main.js",
   "scripts": {
-    "start": "ts-node -r tsconfig-paths/register ./src/main.ts",
+    "start": "export NODE_ENV=development; ts-node -r tsconfig-paths/register ./src/main.ts",
     "start:prod": "node -r ts-node/register/transpile-only ./dist/main.js",
     "dev": "nodemon src/**/*.ts",
     "lint": "tsc --noEmit && eslint . --ext .ts --fix",
@@ -29,6 +29,7 @@
   "homepage": "https://gitlab.com/koleg1/api#readme",
   "dependencies": {
     "@covve/easy-vcard": "^1.0.0",
+    "@types/convict-format-with-validator": "^6.0.1",
     "aws-sdk": "^2.819.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -36,12 +37,14 @@
     "class-validator": "^0.12.2",
     "class-validator-jsonschema": "^2.0.3",
     "convict": "^6.0.0",
+    "convict-format-with-validator": "^6.0.0",
     "crypto-js": "^4.0.0",
     "deep-copy-ts": "^0.5.0",
     "deep-equal": "^2.0.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "fuse.js": "^6.4.3",
+    "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "kill-port": "^1.6.1",
     "morgan": "^1.10.0",
@@ -55,17 +58,18 @@
     "routing-controllers-openapi": "^2.2.0",
     "sequelize": "^6.3.5",
     "slugify": "^1.4.6",
-    "swagger-typescript-api": "^3.0.1",
+    "swagger-typescript-api": "^3.1.2",
     "swagger-ui-express": "^4.1.5",
     "ts-node": "^9.0.0",
     "typedi": "^0.8.0",
-    "url-join-ts": "^1.0.5"
+    "url-join-ts": "^1.0.5",
+    "yaml": "^1.10.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^3.0.0",
-    "@types/convict": "^5.2.1",
     "@types/bluebird": "^3.5.33",
+    "@types/convict": "^5.2.2",
     "@types/crypto-js": "^4.0.1",
     "@types/deep-equal": "^1.0.1",
     "@types/email-templates": "^7.1.0",
@@ -76,7 +80,7 @@
     "@types/mocha": "^8.0.4",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
-    "@types/node": "^14.14.10",
+    "@types/node": "^14.14.20",
     "@types/passport": "^1.0.4",
     "@types/passport-http-bearer": "^1.0.36",
     "@types/passport-jwt": "^3.0.3",
