--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "kill-port": "^1.6.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
     "openapi-comment-parser": "^1.0.0",
     "pg": "^8.5.1",
