--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "nodemon src/**/*.ts",
     "lint": "tsc --noEmit && eslint . --ext .ts --fix",
     "build": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
+    "clean": "rm -rf dist/*; rm -f tsconfig.tsbuildinfo ",
     "test": "mocha --color -r tsconfig-paths/register -r ts-node/register tests/**/*.test.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "codegen": " npx swagger-typescript-api -p openapi.yml -n KolegApi.ts -o ./auto"
