[#24][🐛] Fix convict port model
📑 Description:
For strange reason  convict
refuse to use env variable:
`KOLEG_API_PORT`

for `api.port` config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,10 +70,9 @@ pages:
 ☸️production_deploy:
   stage: 🚀deploy
   image: google/cloud-sdk
-  # TODO: remove it when pipeline is validated
-  # only:
-  #   - master
-  #   - develop
+  only:
+    - master
+    - develop
   script: |
     echo "Deploy on branch: ${CI_COMMIT_BRANCH}"
     kubectl \
