--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: .
     hostname: api
     environment:
-      - "KOLEG_API_PORT=8888"
+      - "KOLEG_API_LISTEN_PORT=8888"
     ports:
       - "127.0.0.1:8888:8888"
     volumes:
