[#28][♻️] Start implements of Factory/Result/Guard
📑 Description:
Start implements of result/Guard as core part into:
- Jobs
- Password
- PhoneNumber
- SshKey

ℹ Why is it necessary ?
- To have high lever and fancy return management

🔝 How does the change address the issue ?
- Implement class from fork of:
https://github.com/stemmlerjs/white-label/tree/503ee491192a3eff026704f4de9a7477daebb630

⚠ What side effects does this change have ?
- We need to change all return type and all classes into project

Todo:
- Simplify Result class
- Implement Either class

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
         "indent": ["error", 2],
         "semi": ["error", "always"],
         "camelcase": ["error", {"properties": "always"}],
+        "@typescript-eslint/no-namespace": "off",
         "quotes": ["error", "double"]
     },
     "plugins": [
