--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
             "domain/*": ["./domain/*"],
             "infra/*": ["./infra/*"],
             "app/*": ["./app/*"],
+            "core/*": ["./core/*"],
             "*": [
                 "node_modules/*"
             ]
