--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "aws-sdk": "^2.819.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "class-transformer": "^0.3.1",
+    "class-transformer": "0.3.1",
     "class-validator": "^0.12.2",
     "class-validator-jsonschema": "^2.0.3",
     "convict": "^6.0.0",
