--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator-jsonschema": "^2.0.3",
     "convict": "^6.0.0",
     "convict-format-with-validator": "^6.0.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "deep-copy-ts": "^0.5.0",
     "deep-equal": "^2.0.5",
